--- a/front/borne-parfums-app/src/styles.css
+++ b/front/borne-parfums-app/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('/assets/fonts/playfair-v10-latin-regular.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Inter';
+    src: url('/assets/fonts/playfair-v10-latin-regular.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  :root {
+    font-size: 16px;
+  }
+  
